--- a/k8s/social_graph.yaml
+++ b/k8s/social_graph.yaml
@@ -69,7 +69,7 @@ metadata:
     svc: social-graph
     app: manager
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       svc: social-graph
@@ -82,7 +82,7 @@ spec:
     spec:
       containers:
       - name: social-graph-manager
-        image: g1g1/delinkcious-social-graph:0.3
+        image: g1g1/delinkcious-social-graph:0.8
         imagePullPolicy: Always
         ports:
         - containerPort: 9090
@@ -104,3 +104,42 @@ spec:
   selector:
     svc: social-graph
     app: manager
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: social-graph-reader
+  namespace: delinkcious
+  labels:
+    svc: social-graph
+    app: manager
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      svc: social-graph
+      app: reader
+  template:
+    metadata:
+      labels:
+        svc: social-graph
+        app: reader
+    spec:
+      containers:
+      - name: social-graph-reader
+        image: g1g1/delinkcious-social-graph-reader:0.1
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: social-graph-reader
+  namespace: delinkcious
+spec:
+  ports:
+  - port: 8000
+  selector:
+    svc: social-graph
+    app: reader
